--- a/Learning_itertools.ipynb
+++ b/Learning_itertools.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMXMAV0D3D67h1fsq5dyrgx",
+      "authorship_tag": "ABX9TyMxuuDcJh9PVJNYHvaMOY1f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 40,
       "metadata": {
         "id": "nHRegF8_Fdn4"
       },
@@ -37,7 +37,8 @@
       "source": [
         "from itertools import count\n",
         "from itertools import repeat\n",
-        "from itertools import cycle"
+        "from itertools import cycle\n",
+        "from itertools import zip_longest"
       ]
     },
     {
@@ -215,11 +216,37 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "colors = ['red', 'green', 'blue', 'purple', 'cyan', 'gray', 'black']\n",
+        "my_counter = my_count(start = 0)\n",
+        "color_map = dict(zip(colors, my_counter))\n",
+        "print(color_map)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5e_kkl39QtIa",
+        "outputId": "fb625e03-bd22-4fba-f0e0-42da0cf77f3f"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'red': 0, 'green': 1, 'blue': 2, 'purple': 3, 'cyan': 4, 'gray': 5, 'black': 6}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "5e_kkl39QtIa"
+        "id": "YHnSQw6Odq0Q"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
